# time-series-python

./: .env_example  .gitignore  README.md  evaluate.py  experiments.py  main.py  pyproject.toml  requirements.txt  smoke_test.py
data/SMD/: machine-1-1_label.csv  machine-1-1_test.csv
src/: config.py  const.py
src/data_loader/: base.py  cic.py  factory.py  smd.py
src/loss/: calculators.py  definitions.py  factory.py  strategy.py
src/model/: base.py  factory.py  lstm_ae.py  tcn_ae.py  transformer_ae.py
src/time_series_python/: __init__.py
src/utils/: logger.py  metrics.py
tests/: test_loader.py  test_loss_workflow.py  test_metrics.py
