[project]
name = "time-series-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "scikit-learn==1.7.2",
    "tabulate==0.9.0",
    "tensorflow==2.20.0",
]
